320px Horizontal scrolling fix

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -17,6 +17,5 @@
 @media screen and (max-width: 627px){
     .cards__list {
         gap: 12px;
-        max-width: 288px;
     }
 }
